[gd_scene load_steps=7 format=2]

[ext_resource path="res://Core/MainGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Core/Root.gd" type="Script" id=2]
[ext_resource path="res://UI/UIPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/TopMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Chess/FileParser.tscn" type="PackedScene" id=5]
[ext_resource path="res://Core/Lobby.gd" type="Script" id=6]

[node name="Root" type="Node"]
script = ExtResource( 2 )

[node name="ErrorPopup" type="WindowDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0

[node name="ErrorMessage" type="Label" parent="ErrorPopup"]
margin_right = 40.0
margin_bottom = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenu" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 720.0
margin_bottom = 567.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainGame" parent="VBoxContainer/HBoxContainer/ViewportContainer" instance=ExtResource( 1 )]
size = Vector2( 720, 567 )
handle_input_locally = false
render_target_update_mode = 3

[node name="UIPanel" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 567.0
size_flags_horizontal = 1

[node name="FileParser" parent="." instance=ExtResource( 5 )]

[node name="GamesDialog" type="AcceptDialog" parent="."]
margin_right = 150.0
margin_bottom = 65.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 8
window_title = "Select Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GamesDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GamesDialog/ScrollContainer"]
margin_right = 134.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lobby" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="close_game" from="VBoxContainer/TopMenu" to="VBoxContainer/HBoxContainer/UIPanel" method="close_game"]
[connection signal="connect" from="VBoxContainer/TopMenu" to="Lobby" method="client"]
[connection signal="disconnect" from="VBoxContainer/TopMenu" to="Lobby" method="_close_connection"]
[connection signal="host" from="VBoxContainer/TopMenu" to="Lobby" method="host"]
[connection signal="load_game" from="VBoxContainer/TopMenu" to="." method="_on_TopMenu_load_game"]
[connection signal="new_game" from="VBoxContainer/TopMenu" to="." method="_on_TopMenu_new_game"]
[connection signal="next_turn" from="VBoxContainer/TopMenu" to="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" method="next_turn"]
[connection signal="prev_turn" from="VBoxContainer/TopMenu" to="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" method="prev_turn"]
[connection signal="save_game" from="VBoxContainer/TopMenu" to="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" method="_on_TopMenu_save_game"]
[connection signal="update_headers" from="VBoxContainer/TopMenu" to="VBoxContainer/HBoxContainer/UIPanel" method="set_headers"]
[connection signal="new_game" from="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" to="VBoxContainer/HBoxContainer/UIPanel" method="new_game"]
[connection signal="new_turn" from="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" to="VBoxContainer/HBoxContainer/UIPanel" method="new_turn"]
[connection signal="reload_games" from="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" to="VBoxContainer/HBoxContainer/UIPanel" method="reload_games"]
[connection signal="turn_updated" from="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" to="VBoxContainer/HBoxContainer/UIPanel" method="update_turn"]
[connection signal="panic_game" from="VBoxContainer/HBoxContainer/UIPanel" to="." method="new_game"]
[connection signal="read" from="FileParser" to="." method="_on_FileParser_read"]
[connection signal="server_connected" from="Lobby" to="." method="_on_Lobby_server_connected"]
[connection signal="server_disconnected" from="Lobby" to="." method="_on_Lobby_server_disconnected"]
[connection signal="server_started" from="Lobby" to="." method="_on_Lobby_server_started"]
[connection signal="sync_games" from="Lobby" to="VBoxContainer/HBoxContainer/ViewportContainer/MainGame" method="sync_games"]
